# senku

./: .bazelignore  .bazelrc  .envrc  .gitattributes  .gitignore  .npmrc  .pre-commit-config.yaml  .terraform.lock.hcl  BUILD  CLAUDE.md  LICENSE  MODULE.bazel  README.md  buildbuddy.yaml  gazelle_python.yaml  go.mod  go.sum  hummingbird.lock.json  hummingbird_install.json  package.json  pnpm-lock.yaml  requirements.in  requirements_linux.txt  requirements_macos.txt  tsconfig.json  versions.tf  wolfi.lock.json
.aspect/: README.md  apply.axl  plan.axl  runnable.axl  stdlib.axl  terraform.axl
.github/: CODEOWNERS  renovate-entrypoint.sh  renovate.json
.github/workflows/: ci.yaml  knife-update-debian-packages.yaml  knife-update-grype-db.yaml  publish.yaml  release-cli.yaml  release-knife.yaml  renovate.yaml  terraform.yaml  update-debian-packages.yaml  update-grype-db.yaml  update-rpm-packages.yaml  weekly_tag.yaml
base/cmp/: BUILD  cmp.go  cmp_test.go
base/diff/: BUILD  diff.go  diff_test.go
bazel/: BUILD  defaults.bazelrc  workspace_status.sh
bazel/include/: .terraform.lock.hcl  BUILD  go.MODULE.bazel  javascript.MODULE.bazel  kubernetes.MODULE.bazel  multitool.MODULE.bazel  oci.MODULE.bazel  proto.MODULE.bazel  python.MODULE.bazel  terraform.MODULE.bazel  terraform.providers.lock.bzl  terraform.providers.lock.json
bazel/modules/rules_apk/: .gitignore  BUILD  MODULE.bazel  README.md  go.mod  go.sum  rules_apk.bzl
bazel/modules/rules_apk/apk/: BUILD  defs.bzl  extensions.bzl
bazel/modules/rules_apk/apk/private/: BUILD  apkdb_merge.bzl  gather.bzl  install.bzl  lockfile.bzl  per_package.bzl  pin.bzl  pin.sh.tpl  providers.bzl
bazel/modules/rules_apk/apk/tools/: BUILD
bazel/modules/rules_apk/apk/tools/apk-extract/: BUILD  main.go  main_test.go
bazel/modules/rules_apk/apk/tools/apkdb-merge/: BUILD  main.go  main_test.go
bazel/modules/rules_apk/apk/tools/internal/apkformat/: BUILD  multigz.go  multigz_test.go  signature.go  signature_test.go
bazel/modules/rules_apk/apk/tools/internal/apkkey/: BUILD  apkkey.go  apkkey_test.go
bazel/modules/rules_apk/apk/tools/pin/: BUILD  main.go  main_test.go
bazel/modules/rules_rpm/: .gitignore  BUILD  MODULE.bazel  go.mod  go.sum  rules_rpm.bzl
bazel/modules/rules_rpm/rpm/: BUILD  defs.bzl  extensions.bzl
bazel/modules/rules_rpm/rpm/private/: BUILD  gather.bzl  gpg.bzl  install.bzl  lockfile.bzl  per_package.bzl  pin.bzl  pin.sh.tpl  providers.bzl  rpmdb_merge.bzl
bazel/modules/rules_rpm/rpm/tools/: BUILD
bazel/modules/rules_rpm/rpm/tools/internal/keyring/: BUILD  keyring.go  keyring_test.go
bazel/modules/rules_rpm/rpm/tools/pin/: BUILD  main.go  main_test.go
bazel/modules/rules_rpm/rpm/tools/rpm-extract/: BUILD  main.go  main_test.go
bazel/modules/rules_rpm/rpm/tools/rpm-extract/testdata/: BUILD  hummingbird-release.pgp  tzdata.rpm
bazel/modules/rules_rpm/rpm/tools/rpmdb-merge/: BUILD  main.go  main_test.go
bazel/modules/rules_rpm/rpm/tools/rpmdb-merge/testdata/: BUILD  tzdata.header.blob
bazel/modules/terraform.bzl/: .gitignore  BUILD  MODULE.bazel  gcp.bzl  go.mod  go.sum  k8s.bzl  terraform.bzl
bazel/modules/terraform.bzl/terraform/: BUILD  defs.bzl  extensions.bzl  hcl.bzl  hcl_test.bzl  lint.bzl  lint_wrapper.sh.tpl  lockfile.bzl  pin.sh.tpl  platforms.bzl  provider.bzl  rule.bzl  runner.sh.tpl
bazel/modules/terraform.bzl/terraform/examples/empty/: BUILD  expected_backend.tf.json
bazel/modules/terraform.bzl/terraform/private/: BUILD
bazel/modules/terraform.bzl/terraform/private/pin/: BUILD  main.go  main_test.go
bazel/modules/terraform.bzl/terraform/resources/: BUILD  gcp.bzl  k8s.bzl
bazel/modules/terraform.bzl/terraform/toolchain/: BUILD  toolchain.bzl
bazel/patches/: buildtools_api_proto.patch  buildtools_build_proto.patch  buildtools_lang.patch  googleapis_remove_py_test.patch  llvm_compiler_rt_search_dir.patch  package_metadata_cpe.patch  rules_distroless_package_metadata.patch  rules_distroless_version_sort.patch  rules_distroless_virtual_provides.patch  supply_chain_go_cyclonedx_cpe.patch  supply_chain_go_pkgmeta_cpe.patch  supply_chain_tools_rule_filters_rpm.patch
bazel/pkg/grypedb/testdata/: module.bazel
bazel/terraform/: .terraform.lock.hcl  README.md  cache.tf  outputs.tf  providers.tf  registry.generated.tf  variables.tf  wif.tf
bazel/toolchains/: BUILD.bazel  rbe.bzl
bazel/toolchains/bifrost/: BUILD
bazel/toolchains/cosign/: BUILD
bazel/toolchains/grype/: BUILD
bazel/toolchains/helm/: BUILD
bazel/toolchains/kubeconform/: BUILD
bazel/toolchains/kustomize/: BUILD
bazel/toolchains/syft/: BUILD
bifrost/: BUILD  README.md  bifrost.bzl  render.bzl
devtools/bifrost/: README.md  bifrost.bzl  render.bzl
devtools/rabbitloop/: BUILD  README.md  claude.py  claude_test.py  detect.py  detect_test.py  github.py  github_test.py  main.py  main_test.py
devtools/resolve-secrets/: BUILD  README.md  main.go  main_test.go  resolve_test.go
devtools/workstation/: BUILD  README.md  config.bzl  debian.lock.json  debian.yaml  exevm.sh
distroless/: BUILD  distro.bzl  nginx-mainline.yaml  nginx-stable.lock.json  nginx-stable.yaml
distroless/base/: BUILD  base.bzl  test.yaml
distroless/bash/: BUILD  bash.bzl  config.bzl  test.yaml
distroless/common/: BUILD
distroless/go/: BUILD  config.bzl  go.bzl
distroless/nginx/: BUILD  README.md  default.conf  frontend.bzl  nginx.bzl  nginx.conf  test.yaml
distroless/nodejs/: BUILD  config.bzl  (+1 more)
docs/: assets.md  infra-as-starlark.md  oci-CONTEXT.md  panallet-cross-repo.md  panallet.md  panellet-CONTEXT.md  panellet-cross-repo.md  panellet-ssr-roadmap.md  panellet.md  styling.md
oci/: BUILD  aspects.bzl  config.bzl  cosign_policy.bzl  created_timestamp.bzl  frontend_image.bzl  go_image.bzl  js_image.bzl  mirror_push.bzl  oci_image.bzl  py_image.bzl  supply_chain.bzl  vex.bzl
plans/: stylex-rule-transitive-collection.md  transitive-stylex-collection.md
python/: BUILD  gazelle_python.yaml  requirements.in  requirements_linux.txt  requirements_macos.txt
tools/: BUILD  b3sum.py  repin  repin-registry  tools.lock.json
(+550 files in other folders)
