module(
    name = "senku",
    version = "0.0.0",
)

bazel_dep(name = "platforms", version = "1.0.0")
bazel_dep(name = "bazel_skylib", version = "1.9.0")
bazel_dep(name = "bazel_lib", version = "3.2.2")
bazel_dep(name = "jq.bzl", version = "0.6.1")
bazel_dep(name = "gazelle", version = "0.50.0")
bazel_dep(name = "rules_shell", version = "0.8.0")

bazel_dep(name = "bazelrc-preset.bzl", version = "1.9.2", dev_dependency = True)

# Not dev_dependency: //:BUILD loads from this plugin to wire up gazelle, and
# that load needs to succeed when @senku is consumed as a non-root bzlmod dep.
bazel_dep(name = "bazel_skylib_gazelle_plugin", version = "1.9.0")

bazel_dep(name = "lazy_bazel_env.bzl", version = "0.0.0", dev_dependency = True)
bazel_dep(name = "yq.bzl", version = "0.3.6", dev_dependency = True)

bazel_dep(name = "toolchains_buildbuddy", version = "0.0.4")

include("//bazel/include:proto.MODULE.bazel")
include("//bazel/include:oci.MODULE.bazel")
include("//bazel/include:go.MODULE.bazel")
include("//bazel/include:javascript.MODULE.bazel")
include("//bazel/include:python.MODULE.bazel")
include("//bazel/include:kubernetes.MODULE.bazel")
include("//bazel/include:multitool.MODULE.bazel")

git_override(
    module_name = "lazy_bazel_env.bzl",
    commit = "ac7a013ecd76450797ecea93fb3ab65958257736",
    remote = "https://github.com/arkeros/lazy_bazel_env.bzl.git",
)

single_version_override(
    module_name = "rules_android",
    version = "0.7.1",
)

jq_toolchains = use_extension("@jq.bzl//jq:extensions.bzl", "toolchains")
use_repo(jq_toolchains, "jq_toolchains")

buildbuddy = use_extension("@toolchains_buildbuddy//:extensions.bzl", "buildbuddy")
buildbuddy.platform(buildbuddy_container_image = "UBUNTU22_04_IMAGE")
use_repo(buildbuddy, "buildbuddy_toolchain")

register_toolchains(
    "@toolchains_buildbuddy//toolchains/cc:ubuntu_gcc_x86_64",
    # Register the source-built bifrost toolchain first so in-repo edits to
    # //devtools/bifrost/cli apply to checked-in renders without needing a
    # release. External consumers register the prebuilt variant via the
    # bifrost module extension and fall through to that.
    "//bazel/toolchains/bifrost:bifrost",
)
