module(
    name = "senku",
    version = "0.0.0",
)

bazel_dep(name = "platforms", version = "1.1.0")
bazel_dep(name = "bazel_skylib", version = "1.9.0")
bazel_dep(name = "bazel_lib", version = "3.3.1")
bazel_dep(name = "jq.bzl", version = "0.6.1")
bazel_dep(name = "gazelle", version = "0.51.3")
bazel_dep(name = "rules_shell", version = "0.8.0")

# Hermetic LLVM cc toolchain — sole cc toolchain for senku. Works on macOS
# host (cross-compiles to linux ELFs) and on linux RBE workers (extracted
# into the worker container; cached after first action). Replaces the
# previous toolchains_buildbuddy split, modeled on openai/codex's setup.
bazel_dep(name = "llvm", version = "0.8.6")

register_toolchains("@llvm//toolchain:all")

# Patched busybox built via //bazel/registry. Consumed lazily — no compile
# happens unless something depends on @busybox//... — but the dep is not
# dev-only because the cc toolchain that builds it (llvm) isn't either.
bazel_dep(name = "busybox", version = "1.37.0.senku.1")

# Local repo rule emitting `@rbe_platform//:rbe_platform` for `--config=rbe`.
# Pins the BuildBuddy worker image by SHA; see //bazel/toolchains:rbe.bzl.
rbe_platform_repository = use_repo_rule("//bazel/toolchains:rbe.bzl", "rbe_platform_repository")

rbe_platform_repository(name = "rbe_platform")

# Not dev_dependency: //:BUILD loads from this plugin to wire up gazelle, and
# that load needs to succeed when @senku is consumed as a non-root bzlmod dep.
bazel_dep(name = "bazel_skylib_gazelle_plugin", version = "1.9.0")

bazel_dep(name = "lazy_bazel_env.bzl", version = "0.0.0", dev_dependency = True)
bazel_dep(name = "yq.bzl", version = "0.3.6", dev_dependency = True)
bazel_dep(name = "package_metadata", version = "0.0.10", dev_dependency = True)

bazel_dep(name = "supply_chain_tools", version = "0.0.1")

bazel_dep(name = "bazelrc-preset.bzl", version = "1.9.2", dev_dependency = True)

include("//bazel/include:proto.MODULE.bazel")
include("//bazel/include:oci.MODULE.bazel")
include("//bazel/include:go.MODULE.bazel")
include("//bazel/include:javascript.MODULE.bazel")
include("//bazel/include:python.MODULE.bazel")
include("//bazel/include:kubernetes.MODULE.bazel")
include("//bazel/include:multitool.MODULE.bazel")
include("//bazel/include:terraform.MODULE.bazel")

# FIXME: drop archive_override after https://github.com/bazel-contrib/supply-chain/pull/158 is merged and released
# FIXME: drop supply_chain_tools_rule_filters_rpm.patch after a follow-up upstream PR adds rules_rpm's `rpm_package`/`rpmdb_merge` to the default filter list, or surfaces the `user_filtered_rule_kinds.bzl` extension point the rule_filters.bzl docstring promises.
archive_override(
    module_name = "supply_chain_tools",
    integrity = "sha256-n934H5t5lmrAN/Dhq6jf59B02FpEJIYyC4YmVEf9obU=",
    patch_strip = 1,
    patches = ["//bazel/patches:supply_chain_tools_rule_filters_rpm.patch"],
    strip_prefix = "supply-chain-19778b53bab50d308dea6dd46ee9f6cc7b5a4da2/tools",
    urls = ["https://github.com/bazel-contrib/supply-chain/archive/19778b53bab50d308dea6dd46ee9f6cc7b5a4da2.tar.gz"],
)

# FIXME: drop archive_override after https://github.com/bazel-contrib/supply-chain/pull/158 is merged and released
# FIXME: drop supply_chain_go_cpe.patch once upstream adds first-class CPE support
# to `package_metadata` and propagates it through the cyclonedx generator. Required
# by ADR 0007's silent-zero gate — see //bazel/patches:package_metadata_cpe.patch.
archive_override(
    module_name = "supply-chain-go",
    integrity = "sha256-n934H5t5lmrAN/Dhq6jf59B02FpEJIYyC4YmVEf9obU=",
    patch_strip = 1,
    patches = [
        "//bazel/patches:supply_chain_go_pkgmeta_cpe.patch",
        "//bazel/patches:supply_chain_go_cyclonedx_cpe.patch",
    ],
    strip_prefix = "supply-chain-19778b53bab50d308dea6dd46ee9f6cc7b5a4da2/lib/supplychain-go",
    urls = ["https://github.com/bazel-contrib/supply-chain/archive/19778b53bab50d308dea6dd46ee9f6cc7b5a4da2.tar.gz"],
)

# FIXME: drop package_metadata_cpe.patch once upstream lands an equivalent of the
# `cpe` attribute on `package_metadata`. See companion supply_chain_go_cpe.patch
# above — both must move together. ADR 0007 silent-zero rationale lives in the
# patch header.
single_version_override(
    module_name = "package_metadata",
    patch_strip = 1,
    patches = ["//bazel/patches:package_metadata_cpe.patch"],
    version = "0.0.10",
)

git_override(
    module_name = "lazy_bazel_env.bzl",
    commit = "ac7a013ecd76450797ecea93fb3ab65958257736",
    remote = "https://github.com/arkeros/lazy_bazel_env.bzl.git",
)

single_version_override(
    module_name = "rules_android",
    version = "0.7.1",
)

jq_toolchains = use_extension("@jq.bzl//jq:extensions.bzl", "toolchains")
use_repo(jq_toolchains, "jq_toolchains")

register_toolchains(
    # Register the source-built bifrost toolchain first so in-repo edits to
    # //devtools/bifrost/cli apply to checked-in renders without needing a
    # release. External consumers register the prebuilt variant via the
    # bifrost module extension and fall through to that.
    "//bazel/toolchains/bifrost:bifrost",
)

# resolve-secrets has no Starlark-rule consumer inside senku; the extension
# exists to let external modules (e.g. astrograde) depend on the prebuilt
# binary as a sh_binary without rebuilding the Go source. The dev_dependency
# flag keeps it off downstream modules' resolution graph — they opt in by
# declaring their own use_extension. Senku, as the root module, still sees
# it activated via the use_repo below.
resolve_secrets = use_extension(
    "//platform/k8s/resolve-secrets/prebuilt:extensions.bzl",
    "resolve_secrets",
    dev_dependency = True,
)
use_repo(resolve_secrets, "resolve_secrets")
