bazel_dep(name = "rules_go", version = "0.60.0")

go_sdk = use_extension("@rules_go//go:extensions.bzl", "go_sdk")
go_sdk.from_file(
    go_mod = "//:go.mod",
)

go_deps = use_extension("@gazelle//:extensions.bzl", "go_deps")
go_deps.from_file(go_mod = "//:go.mod")
go_deps.gazelle_override(
    build_file_generation = "off",
    directives = [
        "gazelle:proto disable",
    ],
    path = "github.com/bazelbuild/buildtools",
)
go_deps.module_override(
    patch_strip = 1,
    patches = [
        "//bazel/patches:buildtools_api_proto.patch",
        "//bazel/patches:buildtools_build_proto.patch",
        "//bazel/patches:buildtools_lang.patch",
    ],
    path = "github.com/bazelbuild/buildtools",
)
use_repo(
    go_deps,
    "com_github_bazelbuild_bazel_watcher",
    "com_github_bazelbuild_buildtools",
    "com_github_google_go_containerregistry",
    "com_github_google_go_containerregistry_cmd_krane",
    "com_github_mikefarah_yq_v4",
)
