bazel_dep(name = "rules_img", version = "0.3.10")
bazel_dep(name = "rules_img_tool", version = "0.3.10")
bazel_dep(name = "rules_distroless", version = "0.6.2")
bazel_dep(name = "tar.bzl", version = "0.10.4")
bazel_dep(name = "grype.bzl", version = "0.1.0")
bazel_dep(name = "cosign.bzl", version = "0.0.0")
bazel_dep(name = "container_structure_test", version = "1.22.1")

local_path_override(
    module_name = "cosign.bzl",
    path = "bazel/modules/cosign.bzl",
)

single_version_override(
    module_name = "rules_distroless",
    patch_strip = 1,
    patches = [
        "//bazel/patches:rules_distroless_version_sort.patch",
        "//bazel/patches:rules_distroless_virtual_provides.patch",
        "//bazel/patches:rules_distroless_package_metadata.patch",
    ],
    version = "0.6.2",
)

register_toolchains(
    "//bazel/toolchains/cosign",
    "//bazel/toolchains/grype",
)

git_override(
    module_name = "grype.bzl",
    commit = "3faf01f19537ba685f9deb9c12b3742b1815c583",
    remote = "https://github.com/arkeros/grype.bzl.git",
)

apt = use_extension("@rules_distroless//apt:extensions.bzl", "apt")

# `mergedusr = True` rewrites /bin, /sbin, /lib* under /usr to match Debian's
# UsrMerge layout (the only one supported on bookworm+). Without it, packages
# that ship the same path under both /bin and /usr/bin produce duplicate-path
# errors when assembling OCI layers. https://wiki.debian.org/UsrMerge
#
# `package_template` overrides the upstream rules_distroless per-.deb BUILD
# template with our own (loads `dpkg_statusd` + `package_metadata`).
apt.install(
    name = "debian",
    distro = "debian-unstable",
    lock = "//oci/distroless:debian.lock.json",
    manifest = "//oci/distroless:debian.yaml",
    mergedusr = True,
    package_template = "//oci/distroless/common:package.BUILD.tmpl",
)
apt.install(
    name = "nginx_stable",
    distro = "debian-unstable",
    lock = "//oci/distroless/nginx:nginx-stable.lock.json",
    manifest = "//oci/distroless/nginx:nginx-stable.yaml",
    mergedusr = True,
    package_template = "//oci/distroless/common:package.BUILD.tmpl",
)
apt.install(
    name = "nginx_mainline",
    distro = "debian-unstable",
    lock = "//oci/distroless/nginx:nginx-mainline.lock.json",
    manifest = "//oci/distroless/nginx:nginx-mainline.yaml",
    mergedusr = True,
    package_template = "//oci/distroless/common:package.BUILD.tmpl",
)
apt.install(
    name = "workstation",
    distro = "debian-unstable",
    lock = "//devtools/workstation:debian.lock.json",
    manifest = "//devtools/workstation:debian.yaml",
    mergedusr = True,
    package_template = "//oci/distroless/common:package.BUILD.tmpl",
)
use_repo(apt, "debian", "nginx_mainline", "nginx_stable", "workstation")

http_file = use_repo_rule("@bazel_tools//tools/build_defs/repo:http.bzl", "http_file")

# Wolfi busybox-static. Statically linked multicall binary with zero shared-lib
# deps — used by both bash production (as the source of /usr/bin/env and the
# other COREUTILS_COMMANDS) and every `*_debug` image variant (toolbox at
# /busybox/<cmd>). A `.apk` is three concatenated gzip-tar streams (signature,
# control, data); //devtools/build/tools/wolfi-apk-extract walks all three and
# pulls `usr/bin/busybox` into a deterministic tar.
#
# Wolfi version+epoch live in oci/distroless/wolfi/busybox-static/{amd64,arm64}/BUILD's
# purl strings; refresh by curling the new .apk and updating sha256 + version.
http_file(
    name = "wolfi_busybox_static_amd64",
    downloaded_file_path = "busybox-static-1.37.0-r57.apk",
    sha256 = "d0e62a1060a6b614e9ba076038faa51a80f419c8ebccb7c1123868fbe8bfbff9",
    urls = ["https://packages.wolfi.dev/os/x86_64/busybox-static-1.37.0-r57.apk"],
)

http_file(
    name = "wolfi_busybox_static_arm64",
    downloaded_file_path = "busybox-static-1.37.0-r57.apk",
    sha256 = "1e96736584edc8b51ded79d3c7bef445d97c9b01c190b2cfc95c50e801533b44",
    urls = ["https://packages.wolfi.dev/os/aarch64/busybox-static-1.37.0-r57.apk"],
)

# Out-of-band binaries baked into //devtools/workstation. Versions are
# pinned; refresh by re-fetching:
#
#   curl -fsSL https://api.github.com/repos/bazelbuild/bazelisk/releases/latest | jq -r .tag_name
#   curl -fsSL https://storage.googleapis.com/claude-code-dist-86c565f3-f756-42ad-8dfa-d59b1c096819/claude-code-releases/stable
#
# then updating the URLs and per-arch sha256s here.
http_file(
    name = "bazelisk_amd64",
    downloaded_file_path = "bazelisk",
    executable = True,
    sha256 = "5a408715e932c0250d28bd84555f12edbf70117de42f9181691c736eacc4a992",
    url = "https://github.com/bazelbuild/bazelisk/releases/download/v1.29.0/bazelisk-linux-amd64",
)

http_file(
    name = "bazelisk_arm64",
    downloaded_file_path = "bazelisk",
    executable = True,
    sha256 = "e20e8b0f4f240091b7a55bf17b9398bd4f40ee70ae0208dff95dd4c445fb4010",
    url = "https://github.com/bazelbuild/bazelisk/releases/download/v1.29.0/bazelisk-linux-arm64",
)

http_file(
    name = "claude_amd64",
    downloaded_file_path = "claude",
    executable = True,
    sha256 = "ba363b2410a47120d2d4b8ece2e11fe0bbc5d59adb1329e8fb87ea0f370f4e46",
    url = "https://storage.googleapis.com/claude-code-dist-86c565f3-f756-42ad-8dfa-d59b1c096819/claude-code-releases/2.1.118/linux-x64/claude",
)

http_file(
    name = "claude_arm64",
    downloaded_file_path = "claude",
    executable = True,
    sha256 = "b77b22fe93c15409f3c64be67950fe11e5fc17d1cd327891596cb87dd9be0492",
    url = "https://storage.googleapis.com/claude-code-dist-86c565f3-f756-42ad-8dfa-d59b1c096819/claude-code-releases/2.1.118/linux-arm64/claude",
)

grype_db = use_extension("@grype.bzl//grype:extensions.bzl", "grype_database", dev_dependency = True)
grype_db.database(
    name = "grype_database",
    sha256 = "14a3e6948bc99af4737992c6c8cc6a8d6f044e9f617cd72c479f7ba05a4779c6",
    url = "https://grype.anchore.io/databases/v6/vulnerability-db_v6.1.4_2026-05-13T00:47:21Z_1778657102.tar.zst",
)
use_repo(grype_db, "grype_database")
